# csv_to_sqlite

./: .gitignore  Cargo.toml
src/: csvcache.rs  main.rs  sql.rs
